Fix logo from overflowing
stack partners on mobile phones

made small callout taller in mobile

--- a/source/sass/_callout.sass
+++ b/source/sass/_callout.sass
@@ -75,3 +75,8 @@
   .callout
     &__description
       width: 90%
+
+@media screen and (max-width: $sm-pixels)
+  .callout
+    &--small
+      height: 540px
