--- a/source/sass/_hero.sass
+++ b/source/sass/_hero.sass
@@ -33,3 +33,7 @@
       display: block
       width: 100%
       text-align: center
+
+  @media screen and (max-width: $sm-pixels)
+    a.call-to-action
+      padding: 1rem 3.5rem
