--- a/source/sass/_homepage.sass
+++ b/source/sass/_homepage.sass
@@ -22,3 +22,8 @@
     &__partner
       align-self: center
       margin: 10px 8px
+
+@media screen and (max-width: $sm-pixels)
+  .partners
+    .container
+      flex-direction: column
