--- a/source/sass/_navbar.sass
+++ b/source/sass/_navbar.sass
@@ -23,6 +23,7 @@ nav.navbar.main-nav
     .navbar-brand-image
       display: block
       margin: 0 auto
+      max-width: 100%
 
     .navbar-toggler
       display: inline-block
